# suika-api

./: .editorconfig  .env.example  .env.testing  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3eebe96462bc_add_indices.py  a6b6ff5a0ca8_initial_migration.py  b096ed4446b2_add_current_price_field.py  b0ad9fe591de_date_to_datetime.py  e726406d6e7a_date_on_market_to_date_created.py  ec88dd44f084_add_date_modified.py  fa1b9301f850_add_sku_and_indexes.py
suika/: config.py  main.py
suika/api/: api.py
suika/api/routes/: index.py  product.py
suika/cli/: main.py
suika/core/: db.py  scrape.py
suika/misc/: set_prices.py
suika/models/: __init__.py  common.py  price.py  product.py
suika/schemas/: collection.py  common.py  info.py  price.py  product.py
suika_api/: __init__.py
tests/: conftest.py  test_product.py  test_suika.py  test_suika_api.py
tests/factories/: product.py
