[tool.poetry]
name = "suika"
version = "0.1.0"
description = ""
authors = ["mari <mari@hakke.ro>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
typer = "^0.4.0"
python-dotenv = "^0.19.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
alembic = "^1.7.4"
flake8 = "^4.0.1"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
